--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head> 
 	<title> Have We Died Yet? </title> 
-	<link rel="stylesheet" href="/style.css" type="text/css">
+	<link rel="stylesheet" href="./style.css" type="text/css">
 </head>
 <body> 
 	<div id="RED"></div>
